# sapling-crypto

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
benches/: pedersen_hash.rs
examples/: bench.rs  sprout_bench.rs
sapling-crypto/: README.md
src/: address.rs  builder.rs  bundle.rs  circuit.rs  constants.rs  group_hash.rs  keys.rs  lib.rs  note_bytes.rs  note_encryption.rs  pczt.rs  pedersen.rs  pedersen_hash.rs  prover.rs  redjubjub.rs  tree.rs  util.rs  value.rs  verifier.rs  zip304.rs  zip32.rs
src/circuit/: blake2s.rs  boolean.rs  constants.rs  ecc.rs  lookup.rs  mod.rs  multieq.rs  multipack.rs  num.rs  pedersen_hash.rs  sha256.rs  uint32.rs
src/circuit/sapling/: mod.rs
src/circuit/sprout/: commitment.rs  input.rs  mod.rs  output.rs  prfs.rs
src/circuit/test/: mod.rs
src/jubjub/: edwards.rs  fs.rs  mod.rs  montgomery.rs  tests.rs
src/note/: commitment.rs  nullifier.rs
src/pczt/: io_finalizer.rs  parse.rs  prover.rs  signer.rs  tx_extractor.rs  updater.rs  verify.rs
src/pedersen_hash/: test_vectors.rs
src/primitives/: mod.rs
src/test_vectors/: note_encryption.rs  signatures.rs
src/tests/: mod.rs  pedersen_hash_vectors.rs
src/value/: sums.rs
src/verifier/: batch.rs
supply-chain/: config.toml
