[package]
name = "sapling-crypto"
version = "0.6.0"
authors = [
    "Sean Bowe <sean@electriccoin.co>",
    "Jack Grigg <jack@electriccoin.co>",
    "Kris Nuttycombe <kris@electriccoin.co>",
]
edition = "2021"
rust-version = "1.70"
description = "Cryptographic library for Zcash Sapling"
homepage = "https://github.com/zcash/sapling-crypto"
repository = "https://github.com/zcash/sapling-crypto"
license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
features = ["test-dependencies"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
ff = { version = "0.13", default-features = false }
group = "0.13"

bls12_381 = { version = "0.8", default-features = false, features = ["alloc"] }
jubjub = { version = "0.10", default-features = false, features = ["alloc"] }
redjubjub = { version = "0.8", default-features = false }
zcash_spec = "0.2"

# Boilerplate
getset = "0.1"

# No-std support
core2 = { version = "0.3", default-features = false, features = ["alloc"] }

# Circuits
bellman = { version = "0.14", default-features = false, features = ["groth16"], optional = true }

# CSPRNG
rand = { version = "0.8", default-features = false }
rand_core = { version = "0.6", default-features = false }

# Digests
blake2b_simd = { version = "1", default-features = false }
blake2s_simd = { version = "1", default-features = false }

# Documentation
document-features = { version = "0.2", optional = true }

# Encodings
hex = { version = "0.4", default-features = false, features = ["alloc"] }

# Logging and metrics
memuse = { version = "0.2.2", default-features = false }
tracing = { version = "0.1", default-features = false }

# Note Commitment Trees
bitvec = { version = "1", default-features = false }
incrementalmerkletree = { version = "0.8.1", default-features = false, features = ["legacy-api"] }

# Note encryption
zcash_note_encryption = { version = "0.4", features = ["pre-zip-212"] }

# Secret management
subtle = { version = "2.6", default-features = false }

# Static constants
lazy_static = "1"

# Test dependencies
proptest = { version = ">=1.0.0, <1.7.0", optional = true }

# ZIP 32
aes = "0.8"
fpe = { version = "0.6", default-features = false, features = ["alloc"] }
zip32 = { version = "0.2", default-features = false }

# ZIP 304
base64 = "0.22"

[dev-dependencies]
chacha20poly1305 = "0.10"
criterion = "0.4"
incrementalmerkletree = { version = "0.8.1", features = ["legacy-api", "test-dependencies"] }
proptest = ">=1.0.0, <1.7.0"
rand_xorshift = "0.3"
wagyu-zcash-parameters = "0.2"

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.11", features = ["criterion", "flamegraph"] } # MSRV 1.56

[features]
default = ["multicore", "circuit"]
std = [
  "core2/std",
  "dep:document-features",
  "group/wnaf-memuse",
  "redjubjub/std"
]

## Enables creation of Sapling proofs
circuit = [
  "dep:bellman",
  "bls12_381/bits",
  "bls12_381/groups",
  "bls12_381/pairings",
  "jubjub/bits",
  "std"
]

## Enables multithreading support for creating proofs.
multicore = ["bellman?/multicore"]

### A temporary feature flag that exposes granular APIs needed by `zcashd`. These APIs
### should not be relied upon and will be removed in a future release.
temporary-zcashd = []

## Exposes APIs that are useful for testing, such as `proptest` strategies.
test-dependencies = [
    "incrementalmerkletree/test-dependencies",
    "dep:proptest",
]

[[bench]]
name = "circuit"
harness = false

[[bench]]
name = "pedersen_hash"
harness = false
